--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,6 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <script type="text/javascript">
-<<<<<<< HEAD:index.html
     function makeGETRequest() {
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function() {
@@ -22,7 +21,7 @@
            }
         };
         
-        xhttp.open("GET","https://cors-anywhere.herokuapp.com/https://careerdevs18-thebretterhalf.c9users.io/api", true);
+        xhttp.open("GET","https://careerdevs18-thebretterhalf.c9users.io/api", true);
         xhttp.setRequestHeader("Content-type", "application/json");
         xhttp.send(); 
     };
@@ -36,7 +35,7 @@
            }
         };
         //open(method, url, async)
-        xhttp.open("POST","https://cors-anywhere.herokuapp.com/https://careerdevs18-thebretterhalf.c9users.io/api", true);
+        xhttp.open("POST","https://careerdevs18-thebretterhalf.c9users.io/api", true);
         //set header to match content type
         xhttp.setRequestHeader("Content-type", "application/json");
         const data = {
@@ -45,41 +44,6 @@
         xhttp.send(JSON.stringify(data)); 
     }    
 </script>
-=======
-  function makeGETRequest() {
-    var xhttp = new XMLHttpRequest();
-    xhttp.onreadystatechange = function() {
-      if (this.readyState == 4 && this.status == 200) {
-        console.log(this)
-        document.getElementById("getResponse").innerHTML = this.responseText
-      }
-    };
-
-    xhttp.open("GET", "https://cors-anywhere.herokuapp.com/https://careerdevs18-christiangracia.c9users.io/api", true);
-    xhttp.setRequestHeader("Content-type", "application/json");
-    xhttp.send();
-  };
-  //MAKE POST REQUEST
-  function makePOSTRequest() {
-    var xhttp = new XMLHttpRequest();
-    xhttp.onreadystatechange = function() {
-      if (this.readyState == 4 && this.status == 200) {
-        console.log(this)
-        document.getElementById("postResponse").innerHTML = this.responseText
-      }
-    };
-    //open(method, url, async)
-    xhttp.open("POST", "https://cors-anywhere.herokuapp.com/https://careerdevs18-christiangracia.c9users.io/api", true);
-    //set header to match content type
-    xhttp.setRequestHeader("Content-type", "application/json");
-    const data = {
-      "employeeID": document.getElementById("employeeName").value
-    };
-    xhttp.send(JSON.stringify(data));
-  }
-</script>
-
->>>>>>> upstream/master:views/index.html
 <body>
   
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -109,21 +73,12 @@
   <div class="center">
     <h1>ABC Company</h1>
 
-<<<<<<< HEAD:index.html
         <button onclick="makeGETRequest();">Get Request</button>
         <p id="getResponse"></p>
         <p>Employee Name</p>
         <input id="employeeName" type="text"/>
         <button onclick="makePOSTRequest()">Post Request</button>
         <p id="postResponse"></p>
-=======
-    <button onclick="makeGETRequest();">Get Request</button>
-    <p id="getResponse"></p>
-    <p>Employee Name</p>
-    <input id="employeeName" type="text" />
-    <button onclick="makePOSTRequest()">Post Request</button>
-    <p id="postResponse"></p>
->>>>>>> upstream/master:views/index.html
 
 </body>
 
