--- a/views/index.html
+++ b/views/index.html
@@ -39,10 +39,42 @@
     //set header to match content type
     xhttp.setRequestHeader("Content-type", "application/json");
     const data = {
-      "employeeID": document.getElementById("employeeName").value
+      "employeeID": document.getElementById("employeeName").value,
+      "totaltime": document.getElementById("totaltime").value
     };
     xhttp.send(JSON.stringify(data));
   }
+  function startTime() {
+    var today = new Date();
+    var h = today.getHours();
+    var m = today.getMinutes();
+    var s = today.getSeconds();
+    var day = today.getDay();
+    if (day==0){
+        var d="Sunday"
+    }
+    else if (day==1){
+        var d="Monday"
+    }
+    else if(day==2){
+        var d="Tuesday"
+    }
+    else if(day==3){
+        var d="Wenesday"
+    }
+    else if (day==4){
+        var d="Thursday"
+    }
+    else if (day==5){
+        var d="Friday"
+    }
+    else{
+        var d="Saturday"
+    }
+    var total = d +","+ h +":"+ m + ":" + s;
+    document.getElementById("totaltime").innerHTML=total
+}
+
 </script>
 
 <body>
@@ -80,7 +112,8 @@
     <input id="employeeName" type="text" />
     <button onclick="makePOSTRequest()">Post Request</button>
     <p id="postResponse"></p>
-
+    <button onclick="startTime()">Current Time</button>
+    <p id="totaltime"></p>
 </body>
 
 </html>
